# arm

./: README.md
color_sorting_arm/: CMakeLists.txt  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  package.xml  setup.sh
color_sorting_arm/config/: controllers.yaml
color_sorting_arm/launch/: complete_system.launch  gazebo.launch  nodes.launch  rviz.launch
color_sorting_arm/scripts/: color_detector.py  gripper_controller.py  motion_planner.py  position_estimator.py  save_raw_image.py  sorting_controller.py  test_arm_movement.py  test_camera.py  test_camera_rotation.py  test_installation.py
color_sorting_arm/urdf/: arm.gazebo.xacro  arm.urdf.xacro
color_sorting_arm/worlds/: sorting_world.world
config/: sorting_arm.rviz
launch/: complete_system.launch  direct_sorting.launch  gazebo.launch  nodes.launch  rviz.launch
msg/: DetectedObject.msg  DetectedObjectArray.msg  Object3D.msg  Object3DArray.msg
scripts/: color_detector.py  direct_sorting.py  motion_planner.py  position_estimator.py
urdf/: arm.gazebo.xacro  arm.urdf.xacro
worlds/: sorting_world.world
